--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,66 @@ button:hover {
 ::-webkit-scrollbar-track {
   background: #111;
 }
+
+.bubbles img {
+  width: 50px;
+  /* height: 50px; */
+  animation: bubble 12s linear infinite;
+}
+
+.bubbles {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: -70px;
+}
+
+@keyframes bubble {
+  0%{
+    transform: translateY(0);
+    opacity: 0;
+  }
+  50%{
+    /* transform: translateY(0); */
+    opacity: 1;
+  }
+  70%{
+    /* transform: translateY(0); */
+    opacity: 1;
+  }
+  100%{
+    transform: translateY(-80vh);
+    opacity: 0;
+  }
+}
+
+.bubbles img:nth-child(1){
+  animation-delay: 2s;
+  width: 25px;
+  height: 25px;
+}
+.bubbles img:nth-child(2){
+  animation-delay: 1s;
+}
+.bubbles img:nth-child(3){
+  animation-delay: 3s;
+  width: 25px;
+  height: 25px;
+}
+.bubbles img:nth-child(4){
+  animation-delay: 4.5s;
+}
+.bubbles img:nth-child(5){
+  animation-delay: 5s;
+  width: 36px;
+  height: 36px;
+}
+.bubbles img:nth-child(6){
+  animation-delay: 3s;
+}
+.bubbles img:nth-child(7){
+  animation-delay: 6s;
+  width: 30px;
+  height: 30px;
+}
